[gd_scene load_steps=10 format=2]

[ext_resource path="res://valem_assets/Mobile - Flappy Bird - Version 12 Sprites.png" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Pipe.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://MovingGround.gd" type="Script" id=6]
[ext_resource path="res://Ground.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 84, 28 )

[sub_resource type="Animation" id=2]
resource_name = "ground"
length = 0.99
tracks/0/type = "value"
tracks/0/path = NodePath("MovingGround/GroundSprite1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.39027, 0.690396 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 2 ]
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
Pipe = ExtResource( 4 )

[node name="Background" type="Node2D" parent="."]

[node name="BackgroundNight" type="Sprite" parent="Background"]
position = Vector2( 216, 128 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 146, -1, 144, 257 )

[node name="BackgroundDay" type="Sprite" parent="Background"]
position = Vector2( 72, 128 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 144, 256 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Ground" type="Area2D" parent="Background"]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Ground"]
position = Vector2( 72.2929, 228.25 )
scale = Vector2( 0.853656, 1.00893 )
shape = SubResource( 1 )

[node name="MovingGround" type="Node2D" parent="Background/Ground"]
script = ExtResource( 6 )

[node name="GroundSprite1" type="Sprite" parent="Background/Ground/MovingGround"]
position = Vector2( 84.5858, 228.25 )
z_index = 1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 292, 0, 168, 56 )

[node name="GroundSprite2" type="Sprite" parent="Background/Ground/MovingGround"]
position = Vector2( 248, 228.25 )
z_index = 1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 292, 0, 168, 56 )

[node name="GroundSprite3" type="Sprite" parent="Background/Ground/MovingGround"]
position = Vector2( 416, 228.25 )
z_index = 1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 292, 0, 168, 56 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/Ground"]
autoplay = "ground"
anims/ground = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 70.5858, 122 )

[node name="PlayerStartPosition" type="Position2D" parent="."]
position = Vector2( 70.5858, 122.088 )

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="PipePosition" type="Position2D" parent="."]
position = Vector2( 152, 128 )

[node name="HUD" parent="." instance=ExtResource( 5 )]
[connection signal="body_entered" from="Background/Ground" to="." method="_on_Ground_body_entered"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_PipeTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
